[gd_scene load_steps=7 format=3 uid="uid://ca4iw0wk4yhcj"]

[ext_resource type="Texture2D" uid="uid://sb22tocblro" path="res://icon.svg" id="1_4flbx"]
[ext_resource type="Script" uid="uid://w8je44c2qm4j" path="res://player/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://4bbctj0nv4tx" path="res://assets/light.png" id="3_i3pqv"]
[ext_resource type="PackedScene" uid="uid://b3ch8qlh2ejs1" path="res://trail/trail_vfx.tscn" id="4_yw30f"]
[ext_resource type="Texture2D" uid="uid://nh5nmdqry56y" path="res://assets/circle-sprite.png" id="5_qjkh3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_onrkg"]
radius = 62.1289

[node name="CharacterBody2D" type="CharacterBody2D"]
floor_snap_length = 32.0
script = ExtResource("1_onrkg")

[node name="SpriteHouser" type="Node2D" parent="."]

[node name="GodotSprite" type="Polygon2D" parent="SpriteHouser"]
visible = false
self_modulate = Color(0, 0, 0, 1)
position = Vector2(0, 62)
offset = Vector2(0, -64)
texture = ExtResource("1_4flbx")
texture_offset = Vector2(1, 0)
polygon = PackedVector2Array(59.1, -64, -59, -64, -63.8, -59, -64, 61, -60.3, 64, 59.6, 64, 63.9, 59, 64, -61.1)
uv = PackedVector2Array(123.1, 0, 5, 0, 0.2, 5, 0, 125, 3.7, 128, 123.6, 128, 127.9, 123, 128, 2.9)
polygons = [PackedInt32Array(0, 1, 2, 3, 4, 5, 6, 7)]

[node name="Sprite2D" type="Polygon2D" parent="SpriteHouser"]
position = Vector2(0, 64)
color = Color(0, 0, 0, 1)
offset = Vector2(0, -64)
texture = ExtResource("5_qjkh3")
polygon = PackedVector2Array(-11, -64, -11, -63, -16, -63, -16, -62, -19, -62, -19, -61, -22, -61, -22, -60, -25, -60, -25, -59, -27, -59, -27, -58, -29, -58, -29, -57, -31, -57, -31, -56, -33, -56, -33, -55, -34, -55, -34, -54, -36, -54, -36, -53, -37, -53, -37, -52, -39, -52, -39, -51, -40, -51, -40, -50, -41, -50, -41, -49, -42, -49, -42, -48, -44, -48, -44, -47, -45, -47, -45, -46, -46, -46, -46, -45, -47, -45, -47, -44, -48, -44, -48, -42, -49, -42, -49, -41, -50, -41, -50, -40, -51, -40, -51, -39, -52, -39, -52, -37, -53, -37, -53, -36, -54, -36, -54, -34, -55, -34, -55, -33, -56, -33, -56, -31, -57, -31, -57, -29, -58, -29, -58, -27, -59, -27, -59, -25, -60, -25, -60, -22, -61, -22, -61, -19, -62, -19, -62, -16, -63, -16, -63, -11, -64, -11, -64, 11, -63, 11, -63, 16, -62, 16, -62, 19, -61, 19, -61, 22, -60, 22, -60, 25, -59, 25, -59, 27, -58, 27, -58, 29, -57, 29, -57, 31, -56, 31, -56, 33, -55, 33, -55, 34, -54, 34, -54, 36, -53, 36, -53, 37, -52, 37, -52, 39, -51, 39, -51, 40, -50, 40, -50, 41, -49, 41, -49, 42, -48, 42, -48, 44, -47, 44, -47, 45, -46, 45, -46, 46, -45, 46, -45, 47, -44, 47, -44, 48, -42, 48, -42, 49, -41, 49, -41, 50, -40, 50, -40, 51, -39, 51, -39, 52, -37, 52, -37, 53, -36, 53, -36, 54, -34, 54, -34, 55, -33, 55, -33, 56, -31, 56, -31, 57, -29, 57, -29, 58, -27, 58, -27, 59, -25, 59, -25, 60, -22, 60, -22, 61, -19, 61, -19, 62, -16, 62, -16, 63, -11, 63, -11, 64, 11, 64, 11, 63, 16, 63, 16, 62, 19, 62, 19, 61, 22, 61, 22, 60, 25, 60, 25, 59, 27, 59, 27, 58, 29, 58, 29, 57, 31, 57, 31, 56, 33, 56, 33, 55, 34, 55, 34, 54, 36, 54, 36, 53, 37, 53, 37, 52, 39, 52, 39, 51, 40, 51, 40, 50, 41, 50, 41, 49, 42, 49, 42, 48, 44, 48, 44, 47, 45, 47, 45, 46, 46, 46, 46, 45, 47, 45, 47, 44, 48, 44, 48, 42, 49, 42, 49, 41, 50, 41, 50, 40, 51, 40, 51, 39, 52, 39, 52, 37, 53, 37, 53, 36, 54, 36, 54, 34, 55, 34, 55, 33, 56, 33, 56, 31, 57, 31, 57, 29, 58, 29, 58, 27, 59, 27, 59, 25, 60, 25, 60, 22, 61, 22, 61, 19, 62, 19, 62, 16, 63, 16, 63, 11, 64, 11, 64, -11, 63, -11, 63, -16, 62, -16, 62, -19, 61, -19, 61, -22, 60, -22, 60, -25, 59, -25, 59, -27, 58, -27, 58, -29, 57, -29, 57, -31, 56, -31, 56, -33, 55, -33, 55, -34, 54, -34, 54, -36, 53, -36, 53, -37, 52, -37, 52, -39, 51, -39, 51, -40, 50, -40, 50, -41, 49, -41, 49, -42, 48, -42, 48, -44, 47, -44, 47, -45, 46, -45, 46, -46, 45, -46, 45, -47, 44, -47, 44, -48, 42, -48, 42, -49, 41, -49, 41, -50, 40, -50, 40, -51, 39, -51, 39, -52, 37, -52, 37, -53, 36, -53, 36, -54, 34, -54, 34, -55, 33, -55, 33, -56, 31, -56, 31, -57, 29, -57, 29, -58, 27, -58, 27, -59, 25, -59, 25, -60, 22, -60, 22, -61, 19, -61, 19, -62, 16, -62, 16, -63, 11, -63, 11, -64)
uv = PackedVector2Array(53, 0, 53, 1, 48, 1, 48, 2, 45, 2, 45, 3, 42, 3, 42, 4, 39, 4, 39, 5, 37, 5, 37, 6, 35, 6, 35, 7, 33, 7, 33, 8, 31, 8, 31, 9, 30, 9, 30, 10, 28, 10, 28, 11, 27, 11, 27, 12, 25, 12, 25, 13, 24, 13, 24, 14, 23, 14, 23, 15, 22, 15, 22, 16, 20, 16, 20, 17, 19, 17, 19, 18, 18, 18, 18, 19, 17, 19, 17, 20, 16, 20, 16, 22, 15, 22, 15, 23, 14, 23, 14, 24, 13, 24, 13, 25, 12, 25, 12, 27, 11, 27, 11, 28, 10, 28, 10, 30, 9, 30, 9, 31, 8, 31, 8, 33, 7, 33, 7, 35, 6, 35, 6, 37, 5, 37, 5, 39, 4, 39, 4, 42, 3, 42, 3, 45, 2, 45, 2, 48, 1, 48, 1, 53, 0, 53, 0, 75, 1, 75, 1, 80, 2, 80, 2, 83, 3, 83, 3, 86, 4, 86, 4, 89, 5, 89, 5, 91, 6, 91, 6, 93, 7, 93, 7, 95, 8, 95, 8, 97, 9, 97, 9, 98, 10, 98, 10, 100, 11, 100, 11, 101, 12, 101, 12, 103, 13, 103, 13, 104, 14, 104, 14, 105, 15, 105, 15, 106, 16, 106, 16, 108, 17, 108, 17, 109, 18, 109, 18, 110, 19, 110, 19, 111, 20, 111, 20, 112, 22, 112, 22, 113, 23, 113, 23, 114, 24, 114, 24, 115, 25, 115, 25, 116, 27, 116, 27, 117, 28, 117, 28, 118, 30, 118, 30, 119, 31, 119, 31, 120, 33, 120, 33, 121, 35, 121, 35, 122, 37, 122, 37, 123, 39, 123, 39, 124, 42, 124, 42, 125, 45, 125, 45, 126, 48, 126, 48, 127, 53, 127, 53, 128, 75, 128, 75, 127, 80, 127, 80, 126, 83, 126, 83, 125, 86, 125, 86, 124, 89, 124, 89, 123, 91, 123, 91, 122, 93, 122, 93, 121, 95, 121, 95, 120, 97, 120, 97, 119, 98, 119, 98, 118, 100, 118, 100, 117, 101, 117, 101, 116, 103, 116, 103, 115, 104, 115, 104, 114, 105, 114, 105, 113, 106, 113, 106, 112, 108, 112, 108, 111, 109, 111, 109, 110, 110, 110, 110, 109, 111, 109, 111, 108, 112, 108, 112, 106, 113, 106, 113, 105, 114, 105, 114, 104, 115, 104, 115, 103, 116, 103, 116, 101, 117, 101, 117, 100, 118, 100, 118, 98, 119, 98, 119, 97, 120, 97, 120, 95, 121, 95, 121, 93, 122, 93, 122, 91, 123, 91, 123, 89, 124, 89, 124, 86, 125, 86, 125, 83, 126, 83, 126, 80, 127, 80, 127, 75, 128, 75, 128, 53, 127, 53, 127, 48, 126, 48, 126, 45, 125, 45, 125, 42, 124, 42, 124, 39, 123, 39, 123, 37, 122, 37, 122, 35, 121, 35, 121, 33, 120, 33, 120, 31, 119, 31, 119, 30, 118, 30, 118, 28, 117, 28, 117, 27, 116, 27, 116, 25, 115, 25, 115, 24, 114, 24, 114, 23, 113, 23, 113, 22, 112, 22, 112, 20, 111, 20, 111, 19, 110, 19, 110, 18, 109, 18, 109, 17, 108, 17, 108, 16, 106, 16, 106, 15, 105, 15, 105, 14, 104, 14, 104, 13, 103, 13, 103, 12, 101, 12, 101, 11, 100, 11, 100, 10, 98, 10, 98, 9, 97, 9, 97, 8, 95, 8, 95, 7, 93, 7, 93, 6, 91, 6, 91, 5, 89, 5, 89, 4, 86, 4, 86, 3, 83, 3, 83, 2, 80, 2, 80, 1, 75, 1, 75, 0)
polygons = [PackedInt32Array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195, 196, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207, 208, 209, 210, 211, 212, 213, 214, 215, 216, 217, 218, 219, 220, 221, 222, 223, 224, 225, 226, 227, 228, 229, 230, 231, 232, 233, 234, 235, 236, 237, 238, 239, 240, 241, 242, 243, 244, 245, 246, 247, 248, 249, 250, 251, 252, 253, 254, 255, 256, 257, 258, 259, 260, 261, 262, 263, 264, 265, 266, 267, 268, 269, 270, 271, 272, 273, 274, 275, 276, 277, 278, 279, 280, 281, 282, 283, 284, 285, 286, 287, 288, 289, 290, 291)]

[node name="Diamond2D" type="Polygon2D" parent="SpriteHouser/Sprite2D"]
position = Vector2(0, -64)
rotation = 0.785398
color = Color(0.858824, 0.901961, 0.913725, 1)
polygon = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_onrkg")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.858824, 0.901961, 0.913725, 1)
blend_mode = 2
shadow_enabled = true
shadow_color = Color(0.0509804, 0.054902, 0.0392157, 1)
texture = ExtResource("3_i3pqv")

[node name="SpriteTrailVfx" parent="." instance=ExtResource("4_yw30f")]
z_index = -1

[node name="VFXSpawnLocation" type="Marker2D" parent="."]
position = Vector2(0, 63)
rotation = -1.5708
gizmo_extents = 131.2
